# shinobi

./: CMakeLists.txt  Dockerfile  Makefile  README.md
src/: handler.c  handler.h  http.c  http.h  main.c  main_lookup  server.c  server.h  utils.c  utils.h
src/html/: index.html
